dbeaver/dbeaver#23203 smart metadata read (#34255)
* dbeaver/dbeaver#23203 Disable extra metadata read

* dbeaver/dbeaver#23203 Annotations for caches

* dbeaver/dbeaver#23203 Optional monitor for meta loading

* dbeaver/dbeaver#23203 Optional monitor for meta loading

* dbeaver/dbeaver#23203 Optional monitor for nav API

* dbeaver/dbeaver#23203 Delete redundant prefs. SQL parser respects metadata settings

* dbeaver/dbeaver#23203 Refactor respecting metadata setting by semantic analysis

* dbeaver/dbeaver#23203 Remove redundant variable

* dbeaver/dbeaver#23203 Merge fix

* dbeaver/dbeaver#23203 Prefs tooltips

* #23203 Local cache progress monitor

* dbeaver/dbeaver#23203 Annotations

* dbeaver/dbeaver#23203 Disable table cache

* dbeaver/dbeaver#23203 Disable filters metadata  read

* dbeaver/dbeaver#23203 Disable filters confirmation if entity metadata is missing

---------

Co-authored-by: Elizabeth <e1izabeth.k@outlook.com>
Co-authored-by: Matvey16 <82543000+Matvey16@users.noreply.github.com>